[package]
name = "rosrust_image"
version = "0.1.0"
authors = ["Lucas Walter <wsacul@gmail.com>"]
edition = "2018"

[[bin]]
name = "image_viewer"
path = "src/image_viewer.rs"

[[bin]]
name = "image_dir_pub"
path = "src/image_dir_pub.rs"

# Performance of pixels screen updating is poor without a higher opt-level
[profile.dev]
opt-level = 3

# need catkin config --cmake-args -DCMAKE_BUILD_TYPE=Release
# and profile.release will be used
# the settings below are redundant
# [profile.release]
# opt-level = 3
# debug = 0

[dependencies]
byteorder = "1.3"
crossbeam-channel = "0.5.0"
env_logger = "0.8"
image = "0.23"
pixels = "0.2.0"
rosrust = { git = "https://github.com/lucasw/rosrust", branch = "noetic_aggregated" }
rosrust_msg = { git = "https://github.com/lucasw/rosrust", branch = "noetic_aggregated" }
winit = "0.24"
winit_input_helper = "0.9"
