[package]
name = "rosrust_image"
version = "0.1.0"
authors = ["Lucas Walter <wsacul@gmail.com>"]
edition = "2018"

[[bin]]
name = "image_viewer"
path = "src/image_viewer.rs"

[profile.dev]
opt-level = 2

[dependencies]
byteorder = "1.3"
pixels = "0.2.0"
rosrust = { git = "https://github.com/lucasw/rosrust", branch = "noetic_aggregated" }
rosrust_msg = { git = "https://github.com/lucasw/rosrust", branch = "noetic_aggregated" }
winit = "0.24"
winit_input_helper = "0.9"
