<?xml version="1.0"?>
<package format="2">
  <name>rosrust_image</name>
  <version>0.0.1</version>
  <description>The rosrust_image ros rust corrosion package</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensors_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensors_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
